openshift/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd-test
  namespace: workshop-html
  labels:
    app: httpd-test
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: httpd-test
status:
  loadBalancer: {}
